import React from "react";
import { shallow } from "enzyme";
import toJSON from "enzyme-to-json";

import CloseButton from "components/CloseButton";

let wrapper, onClick;

beforeEach(() => {
  onClick = jest.fn();
  wrapper = shallow(<CloseButton onClick={onClick} />);
});

afterEach(() => {
  onClick.mockReset();
});

describe("CloseButton", () => {
  it("renders correctly", () => {
    expect(toJSON(wrapper)).toMatchSnapshot();
  });

  it("renders with additional class", () => {
    wrapper.setProps({ className: "my-class" });
    expect(toJSON(wrapper)).toMatchSnapshot();
  });

  it("calls 'onClick'", () => {
    expect(onClick.mock.calls.length).toEqual(0);
    wrapper.simulate("click");
    expect(onClick.mock.calls.length).toEqual(1);
  });
});
