// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton renders correctly 1`] = `
<styled.div
  onClick={[Function]}
>
  <Styled(Icon)
    name="close"
  />
  <Styled(Tooltip)
    text="Delete"
  />
</styled.div>
`;

exports[`CloseButton renders with additional class 1`] = `
<styled.div
  className="my-class"
  onClick={[Function]}
>
  <Styled(Icon)
    name="close"
  />
  <Styled(Tooltip)
    text="Delete"
  />
</styled.div>
`;
